--- a/pos_hide_specific_zone/views/pos_config_views.xml
+++ b/pos_hide_specific_zone/views/pos_config_views.xml
@@ -8,9 +8,9 @@
         <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//setting[@id='other_devices']" position="after">
-                <setting id="screen_numeric_buttons_visible" string="Hide numeric buttons"
+                <setting id="screen_visible_backspece_btn" string="Hide numeric buttons"
                          help="If the option is checked it will be hidden">
-                    <field name="numeric_buttons_visible"/>
+                    <field name="visible_backspece_btn"/>
                 </setting>
             </xpath>
         </field>
