--- a/pos_seerbit/views/res_config_settings_views.xml
+++ b/pos_seerbit/views/res_config_settings_views.xml
@@ -5,7 +5,8 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="point_of_sale.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <div id="pos_payment_terminals_section" position="inside">
+            <!--<div id="pos_payment_terminals_section" position="inside">-->
+            <xpath expr="//block[@id='pos_payment_terminals_section']" position="inside">
                 <div class="col-12 col-lg-6 o_setting_box"
                     id="seerbit_payment_terminal_setting"
                     title="The transactions are processed by Seerbit. Set your terminal credentials on the related payment method.">
@@ -19,7 +20,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </xpath>
         </field>
     </record>
 </odoo>
