--- a/pos_seerbit/views/pos_payment_method_views.xml
+++ b/pos_seerbit/views/pos_payment_method_views.xml
@@ -23,7 +23,9 @@
                 <!-- Seerbit -->
                 <field name="seerbit_public_key" 
                        widget="char"
-                       attrs="{'invisible': [('use_payment_terminal', '!=', 'seerbit')]}"/>
+                       invisible= "use_payment_terminal != 'seerbit'"
+                       required = "use_payment_terminal == seerbit"
+                       />
             </xpath>
         </field>
     </record>
