--- a/pos_seerbit/views/pos_payment_method_views.xml
+++ b/pos_seerbit/views/pos_payment_method_views.xml
@@ -24,7 +24,7 @@
                 <field name="seerbit_public_key" 
                        widget="char"
                        invisible= "use_payment_terminal != 'seerbit'"
-                       required = "use_payment_terminal == seerbit"
+                       required = "use_payment_terminal == 'seerbit'"
                        />
             </xpath>
         </field>
