--- a/pos_hitpay/views/pos_payment_method_views.xml
+++ b/pos_hitpay/views/pos_payment_method_views.xml
@@ -6,11 +6,31 @@
       <field name="inherit_id" ref="point_of_sale.pos_payment_method_view_form"/>
       <field name="arch" type="xml">
           <xpath expr="//field[@name='use_payment_terminal']" position="after">
+                <!--
                 <field name="pos_hitpay_api_key"
                         attrs="{'invisible': [('use_payment_terminal', '!=', 'pos_hitpay')], 'required': [('use_payment_terminal', '=', 'pos_hitpay')]}"/>
 				<field name="pos_hitpay_api_salt" attrs="{'invisible': [('use_payment_terminal', '!=', 'pos_hitpay')], 'required': [('use_payment_terminal', '=', 'pos_hitpay')]}"/>
                 <field name="pos_hitpay_test_mode" attrs="{'invisible': [('use_payment_terminal', '!=', 'pos_hitpay')], 'required': [('use_payment_terminal', '=', 'pos_hitpay')]}"/>
 				<field name="pos_hitpay_terminal_identifier" attrs="{'invisible': [('use_payment_terminal', '!=', 'pos_hitpay')], 'required': [('use_payment_terminal', '=', 'pos_hitpay')]}"/>
+                -->
+
+                <field name="pos_hitpay_api_key"
+                       widget="char"
+                       invisible="use_payment_terminal != 'pos_hitpay'"
+                       required="use_payment_terminal == 'pos_hitpay'"/>
+                <field name="pos_hitpay_api_salt"
+                       widget="char"
+                       invisible="use_payment_terminal != 'pos_hitpay'"
+                       required="use_payment_terminal == 'pos_hitpay'"/>
+                <field name="pos_hitpay_test_mode"
+                       widget="char"
+                       invisible="use_payment_terminal != 'pos_hitpay'"
+                       required="use_payment_terminal == 'pos_hitpay'"/>
+                <field name="pos_hitpay_terminal_identifier"
+                       widget="char"
+                       invisible="use_payment_terminal != 'pos_hitpay'"
+                       required="use_payment_terminal == 'pos_hitpay'"/>
+                       
           </xpath>
       </field>
     </record>
