--- a/pos_hitpay/views/pos_payment.xml
+++ b/pos_hitpay/views/pos_payment.xml
@@ -7,6 +7,7 @@
         <field name="inherit_id" ref="point_of_sale.view_pos_payment_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='session_id']/.." position="after">
+                <!--
                 <group name="hitpay" attrs="{'invisible': [('hitpay_paymentId', '=', False)]}" string="Hitpay Payment Details">
                     <group string="Transaction">
                         <field name="hitpay_paymentId"/>
@@ -22,7 +23,33 @@
                         <field name="hitpay_refundAmount"/>
                         <field name="hitpay_refundCurrency"/>
                     </group>
+                </group> 
+                -->
+                <group name="hitpay" 
+                    invisible="hitpay_paymentId == False" 
+                    string="Hitpay Payment Details">
+                    <group string="Transaction">
+                        <field name="hitpay_paymentId"/>
+                        <field name="hitpay_paymentRequestId"/>
+                        <field name="hitpay_paymentStatus"/>
+                        <field name="hitpay_paymentAmount"/>
+                        <field name="hitpay_paymentCurrency"/>
+                    </group>
                 </group>
+
+                <group name="hitpay_refund" 
+                    invisible="hitpay_refundId == False" 
+                    string="Hitpay Refund Details">
+                    <group string="Transaction">
+                        <field name="hitpay_refundId"/>
+                        <field name="hitpay_refundAmount"/>
+                        <field name="hitpay_refundCurrency"/>
+                    </group>
+                </group>
+
+
+
+
             </xpath>
 
         </field>
