--- a/linkser_by_appex/views/res_config_settings_views.xml
+++ b/linkser_by_appex/views/res_config_settings_views.xml
@@ -14,7 +14,8 @@
                     help="Accept payments with a Linkser payment terminal">
                     <!--<field name="mollie_terminal_api_key" password="True" />
                     <div invisible="not mollie_terminal_api_key">-->
-                        <button type="action" name="%(linkser_pos_terminal.linkser_pos_terminal_action)d" icon="fa-arrow-right" class="btn-link">View Terminals</button>
+                        <!--<button type="action" name="%(linkser_pos_terminal.linkser_pos_terminal_action)d" icon="fa-arrow-right" class="btn-link">View Terminals</button>
+                    -->
                     <!--</div>-->
                 </setting>
             </block>
