--- a/linkser_by_appex/views/res_config_settings_views.xml
+++ b/linkser_by_appex/views/res_config_settings_views.xml
@@ -5,7 +5,7 @@
         <field name="name">res.config.settings.view.form.inherit</field>
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="point_of_sale.res_config_settings_view_form"/>
-        <field name="arch" type="xml">
+        <!--<field name="arch" type="xml">
             <block id="pos_payment_terminals_section" position="inside">
                 <setting 
                     id="linkser_payment_terminal_setting" 
@@ -17,6 +17,11 @@
                     
                 </setting>
             </block>
+        </field>-->
+        <field name="arch" type="xml">
+            <xpath expr="//div[@id='pos_payment_terminals_section']" position="inside">
+                <button type="action" name="%(linkser_pos_terminal.linkser_pos_terminal_action)d" icon="fa-arrow-right" class="btn-link">View Terminals</button>
+            </xpath>
         </field>
     </record>
 
