--- a/mollie_pos_terminal/views/mollie_pos_terminal_views.xml
+++ b/mollie_pos_terminal/views/mollie_pos_terminal_views.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <form>
             <header>
-                <field name="status" widget="statusbar" />
+                <field name="status" widget="statusbar" options="{'clickable': True}"/>
             </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -19,10 +19,11 @@
                     <group>
                         <group>
                             <field name="terminal_id" />
-                            <field name="profile_id" />
-                            <field name="serial_number" />
+                            <field name="terminal_ip" />
+                            <field name="terminal_port" />
                         </group>
                         <group>
+                            <field name="comercio" />
                             <field name="currency_id" />
                         </group>
                     </group>
@@ -35,14 +36,18 @@
         <field name="name">mollie.pos.terminal.view.tree</field>
         <field name="model">mollie.pos.terminal</field>
         <field name="arch" type="xml">
+            <!--
             <tree js_class="mollie_sync_terminal_tree">
                 <header>
                     <button name="action_sync_terminals" type="object" class="btn btn-secondary" string="Sync Terminal" display="always" />
                 </header>
+            -->
+            <tree>
                 <field name="name" />
                 <field name="terminal_id" />
-                <field name="profile_id" />
-                <field name="serial_number" />
+                <field name="terminal_ip" />
+                <field name="terminal_port" />
+                <field name="comercio" />
                 <field name="currency_id" />
                 <field name="status" widget="badge" decoration-info="status == 'pending'" decoration-success="status == 'active'" decoration-danger="status == 'inactive'" />
             </tree>
